--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,10 +12,10 @@
     <h2 class="header" align="center">CV</h2>
     <div class="card horizontal">
       <div class="card-image">
-        <img src="https://p.motionelements.com/stock-video/people/me9055720-man-asian-businessman-business-manager-working-home-typing-japan-a0268.jpg" style="width:500px;height:600px;">
+        <img src="{{data.image}}" style="width:500px;height:600px;">
       </div>
       <div class="card-stacked">
-        <div class="card-content">
+        <div class="card-content" align="center">
             <h2>Info</h2>
             <p>Name: {{data.name}}</p>
             <p>Title: </title>{{data.title}}</p>
@@ -23,18 +23,6 @@
             <p>Phonenumber: {{data.phoneNumber}}</p>
             <p>Email: {{data.email}}</p>
             <p>Adress: {{data.adress}}</p>
-        </div>
-        <div class="card-content">
-            <h2>Qualifications</h2>
-            <p>{{data.qualifications}}</p>
-        </div>
-        <div class="card-content">
-            <ul><h2>Experience</h2>
-                {{#each data.workExperience}}
-                <li>Company: {{this.companyName}}</li>
-                <li>Role: {{this.role}}</li>
-                {{/each}}
-            </ul>
         </div>
         <div class="card-action">
             <ul class="mdc-list">
@@ -46,28 +34,25 @@
       </div>
     </div>
   </div>
-    </body>
-</html>
-<!--
-  <div>
-            <p>Name: {{data.name}}</p>
-            <p>Title: </title>{{data.title}}</p>
-            <p>Date of Birth: {{data.dateOfBirth}}</p>
-            <p>Phonenumber: {{data.phoneNumber}}</p>
-            <p>Email: {{data.email}}</p>
-            <p>Adress: {{data.adress}}</p>
-            <p>Qualifications:{{data.qualifications}}</p>
+  <div class="col s12 m7">
+      <div class="card horizontal">
+          <div class="card-stacked">
+                <div class="card-content" align="center">
+                <h2>Qualifications</h2>
+                <p>{{data.qualifications}}</p>
+        </div>
+        <div class="card-content" align="center">
             <ul><h2>Experience</h2>
-
                 {{#each data.workExperience}}
-                <li>{{this.companyName}}</li>
-                <li>{{this.role}}</li>
+                <li>Company: {{this.companyName}}</li>
+                <li>Role: {{this.role}}</li>
                 {{/each}}
             </ul>
-            <ul class="mdc-list">
-                {{#each data.links}}
-                    <li class="mdc-list-item"><a href={{this}}>{{this}}</a></li>
-                {{/each}}
-            </ul>            
         </div>
-        -->
+              </div>
+          </div>
+      </div>
+
+  
+    </body>
+</html>
